--- a/portafolio.html
+++ b/portafolio.html
@@ -50,27 +50,36 @@
             <div class="web">
                 <div class="container-two">
                     <img src="images/imagen1.1.jpg" width="370" alt="Tecnoduck-Sitio-web">
+                    <div class="tex-emergent">
+                        Tecnoduck es una plataforma de distribución de coronavirus de última generación. Las compañías usan esta plataforma para el espionaje digital y los ataques a los servidores seguros de la competencia.
+                    </div>
                 </div>
-                <div class="container-two">
-                    <h3>Tecnoduck</h3>
-                    <p>Sitio-web</p>
+                <div class="container-two2">
+                    <p class="title">Tecnoduck</p>
+                    <p class="description">Sitio-web</p>
                 </div>
             </div>   
             <div class="web">
                 <div class="container-two">
                     <img src="images/imagen2.2.jpg" width="370" alt="Póster de Nueva Orleans vs Estrella Dorada">
+                    <div class="tex-emergent">
+                        Echa un vistazo a nuestra selección de póster nueva orleans para ver las mejores piezas hechas a mano, únicas o personalizadas de nuestras tiendas.
+                    </div>
                 </div>
-                <div class="container-two">
-                    <h3>Póster de Nueva Orleans vs Estrella Dorada</h3>
+                <div class="container-two2">
+                    <p class="title">Póster de Nueva Orleans vs Estrella Dorada</p>
                 </div>
             </div>
             <div class="web">
                 <div class="container-two">
                     <img src="images/imagen3.3.jpg" width="370" alt="Restaurante Seafood-Aplicaciones">
+                    <div class="tex-emergent">
+                        En el restaurante Seafood Market podrás disfrutar, por la mañana, de ricos desayunos estilo buffet o bien, pedir a la carta; y por la tarde deleitarte con nuestros suculentos platillos de mariscos.
+                    </div>
                 </div>
-                <div class="container-two">
-                    <h3>Restaurante Seafood</h3>
-                    <p>Aplicaciones</p>
+                <div class="container-two2">
+                    <p class="title">Restaurante Seafood</p>
+                    <p class="description">Aplicaciones</p>
                 </div>
             </div>
         </div> 
@@ -80,28 +89,37 @@
             <div class="web">
                 <div class="container-two">
                    <img src="images/imagen4.4.jpg" width="370" alt="Proyecto Prime-Marketing">
+                   <div class="tex-emergent">
+                    Los resultados de este estudio muestran que sólo el 73% de los estudiantes Erasmus recibió el pleno reconocimiento de su período de estudios en el extranjero.
                 </div>
-                <div class="container-two">
-                   <h3>Proyecto Prime</h3>
-                   <p>Marketing</p>
+                </div>
+                <div class="container-two2">
+                   <p class="title">Proyecto Prime</>
+                   <p class="description">Marketing</p>
                 </div>
             </div>
             <div class="web">
                 <div class="container-two">
                     <img src="images/imagen5.5.jpg" width="370" alt="Proyecto Cajas-Aplicaciones">
+                    <div class="tex-emergent">
+                        Aunque una caja se describe genéricamente como un recipiente con tapa, hoy en día el uso de la palabra se ha extendido también a recipientes descubiertos y algunos embalajes.
+                    </div>
                 </div>
-                <div class="container-two">
-                    <h3>Proyecto Cajas</h3>
-                    <p>Aplicaciones</p>
+                <div class="container-two2">
+                    <p class="title">Proyecto Cajas</p>
+                    <p class="description">Aplicaciones</p>
                 </div>
             </div>
             <div class="web">
                 <div class="container-two">
                     <img src="images/imagen6.6.jpg" width="370" alt="La inspiración no tiene límites-Sitio-web">
+                    <div class="tex-emergent">
+                        El autor es inspirado por Dios de alguna forma. Dios se manifiesta al autor a través de sueños, palabras insinuadas, personas, ángeles, entre otros, por lo que el autor recibe un mensaje.
+                    </div>
                 </div>
-                <div class="container-two">
-                    <h3>La inspiración no tiene límites</h3>
-                    <p>Sitio-web</p>
+                <div class="container-two2">
+                    <p class="title">La inspiración no tiene límites</p>
+                    <p class="description">Sitio-web</p>
                 </div>
             </div>
         </div>
@@ -111,28 +129,37 @@
             <div class="web">
                 <div class="container-two">
                     <img src="images/imagen7.7.jpg" width="370" alt="Edición Limitada-Diseño">
+                    <div class="tex-emergent">
+                        En EDICIÓN LIMITADA nos especializamos en ayudar a las empresas a desarrollar contenido audio visual que posicionen su marca y genere ventas.
+                    </div>
                 </div>
-                <div class="container-two">
-                    <h3>Edición Limitada</h3>
-                    <p>Diseño</p>
+                <div class="container-two2">
+                    <p class="title">Edición Limitada</>
+                    <p class="description">Diseño</p>
                 </div>
             </div>
             <div class="web">
                 <div class="container-two">
                     <img src="images/imagen8.8.jpg" width="370" alt="Proyecto LAB-Marketing">
+                    <div class="tex-emergent">
+                        El Proyecto LAB es un acelerador creativo que transforma tus ideas y proyectos en nuevos productos, servicios y experiencias de una manera rápida, sencilla y económica.
+                    </div>
                 </div>
-                <div class="container-two">
-                    <h3>Proyecto LAB</h3>
-                    <p>Marketing</p>
+                <div class="container-two2">
+                    <p class="title">Proyecto LAB</p>
+                    <p class="description">Marketing</p>
                 </div>
             </div>
             <div class="web">
                 <div class="container-two">
                     <img src="images/imagen9.9.jpg" width="370" alt="Negocio en Crecimiento-Aplicaciones">
+                    <div class="tex-emergent">
+                        A pesar de las crisis, hay empresas en franquicia que siguen sus estrategias de crecimiento para ofrecer a los emprendedores negocios sólidos en los que invertir no te quedes sin la oportunidad de emprender.
+                    </div>
                 </div>
-                <div class="container-two">
-                    <h3>Negocio en Crecimientok</h3>
-                    <p>Aplicacione</p>
+                <div class="container-two2">
+                    <p class="title">Negocio en Crecimientok</p>
+                    <p class="description">Aplicacione</p>
                 </div>
             </div>
         </div>
