modified index.html css/styles

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </section>
         <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-                <button data-modal-close>
+                <button class="close" data-modal-close>
                     x
                 </button>
             </div>
